--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.initialization-mode=always
 spring.jpa.defer-datasource-initialization=true
 server.error.include-message=always
 # Hibernate ddl auto (create, update , validate, update)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto= update
